--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"bulma": "^0.6.2",
+		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
 		"react-scripts": "1.1.1"
@@ -13,6 +15,6 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"build-css": "node-sass-chokidar src/ -o src/",
-		"watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
+		"watch-css": "npm run build-css && node-sass-chokidar src/sass -o src/ --watch --recursive"
 	}
 }
