--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
 		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
+		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.1"
 	},
 	"scripts": {
