--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,10 @@
 		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
+		"react-google-maps": "^9.4.5",
 		"react-router-dom": "^4.2.2",
-		"react-scripts": "1.1.1"
+		"react-scripts": "1.1.1",
+		"recompose": "^0.26.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
