--- a/app/package.json
+++ b/app/package.json
@@ -8,9 +8,12 @@
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
 		"react-google-maps": "^9.4.5",
+		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.1",
-		"recompose": "^0.26.0"
+		"recompose": "^0.26.0",
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
