--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"axios": "^0.18.0",
 		"bulma": "^0.6.2",
 		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
@@ -13,6 +14,7 @@
 		"react-scripts": "1.1.1",
 		"recompose": "^0.26.0",
 		"redux": "^3.7.2",
+		"redux-saga": "^0.16.0",
 		"redux-thunk": "^2.2.0"
 	},
 	"scripts": {
