--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
 		"react-scripts": "1.1.1",
 		"recompose": "^0.26.0",
 		"redux": "^3.7.2",
+		"redux-form": "^7.3.0",
 		"redux-logger": "^3.0.6",
 		"redux-saga": "^0.16.0",
 		"redux-thunk": "^2.2.0"
