--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"bulma": "^0.6.2",
+		"glamor": "^2.20.40",
 		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
@@ -12,6 +13,7 @@
 		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.1",
+		"react-spinners": "^0.3.2",
 		"recompose": "^0.26.0",
 		"redux": "^3.7.2",
 		"redux-form": "^7.3.0",
