--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
 		"axios": "^0.18.0",
 		"bulma": "^0.6.2",
 		"glamor": "^2.20.40",
+		"jsonwebtoken": "^8.3.0",
 		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
