Added basic maps functionality

--- a/gentle_student/ios/Runner/Info.plist
+++ b/gentle_student/ios/Runner/Info.plist
@@ -41,5 +41,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>Geef "Gentlestudent" toegang tot jouw locatie.</string>
 </dict>
 </plist>
