--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   map_view: "^0.0.12"
+  flutter_html_view: "^0.5.2"
 
 dev_dependencies:
   flutter_test:
@@ -17,6 +18,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/crest-gentlestudent.png
+    - assets/PrivacyPolicy.txt
+    - assets/AboutUs.txt
   fonts:
       - family: NeoSansPro
         fonts:
