--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
 		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
+		"react-dropzone": "^4.2.13",
 		"react-google-maps": "^9.4.5",
 		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
