--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
 
   map_view: "^0.0.12"
   flutter_html_view: "^0.5.2"
+  intro_views_flutter: "^2.2.2"
 
 dev_dependencies:
   flutter_test:
@@ -20,6 +21,10 @@ flutter:
     - assets/crest-gentlestudent.png
     - assets/PrivacyPolicy.txt
     - assets/AboutUs.txt
+
+    - assets/tutorial/beacon.png
+    - assets/tutorial/bluetooth.png
+    - assets/tutorial/challenge.png
   fonts:
       - family: NeoSansPro
         fonts:
