--- a/gentle_student/ios/Runner/Info.plist
+++ b/gentle_student/ios/Runner/Info.plist
@@ -43,5 +43,17 @@
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
     <string>Geef "Gentlestudent" toegang tot jouw locatie.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.52934623602-6s5k4ns526joa3ffldknau0s4on6m9me</string>
+				<string>com.example.gentlestudent</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
