--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -4,9 +4,9 @@ description: An application that makes students engage more in their community.
 dependencies:
   flutter:
     sdk: flutter
-
+  beacons: any
   cupertino_icons: ^0.1.2
-
+  local_notifications: any
   map_view: "^0.0.12"
   flutter_html_view: "^0.5.2"
   intro_views_flutter: "^2.2.2"
