--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-
+  local_notifications: any
   map_view: "^0.0.12"
   flutter_html_view: "^0.5.2"
   intro_views_flutter: "^2.2.2"
