--- a/gentle_student/android/app/src/main/AndroidManifest.xml
+++ b/gentle_student/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="gentle_student"
+        android:label="Gentlestudent"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyDl5W6GeM02xFCyASmGvKtoP3fJ_xhvUvM"/>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
