--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   firebase_core: 0.2.4
+  firebase_auth: 0.5.12
   cloud_firestore: 0.7.3
   map_view: "^0.0.12"
   date_format: any
