--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -16,6 +16,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  flutter_launcher_icons: "^0.5.2"
+
+flutter_icons:
+  android: true 
+  ios: "Gentlestudent"
+  image_path: "assets/icon/crest_gentlestudent.png"
+  image_path_android: "assets/icon/crest_gentlestudent.png"
+  image_path_ios: "assets/icon/crest_gentlestudent.png"
+  adaptive_icon_foreground: "assets/icon/crest_gentlestudent.png"
 
 flutter:
   uses-material-design: true
