--- a/gentle_student/android/app/src/main/AndroidManifest.xml
+++ b/gentle_student/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name=".App"
         android:label="Gentlestudent"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyDl5W6GeM02xFCyASmGvKtoP3fJ_xhvUvM"/>
