--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   map_view: "^0.0.12"
   date_format: any
   flutter_html_view: "^0.5.2"
+  sqflite: any
   intro_views_flutter: "^2.2.2"
 
 dev_dependencies:
