--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   date_format: any
   flutter_html_view: "^0.5.2"
   intro_views_flutter: "^2.2.2"
+  flutter_svg: any
 
 dev_dependencies:
   flutter_test:
