--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   local_notifications: any
   flutter_local_notifications: "^0.2.9"
   beacons: "^0.3.0"
-  map_view: "^0.0.12"
+  flutter_map: "^0.0.10"
   date_format: any
   flutter_html_view: "^0.5.2"
   intro_views_flutter: "^2.2.2"
