changed info.plist for permissions

--- a/gentle_student/ios/Runner/Info.plist
+++ b/gentle_student/ios/Runner/Info.plist
@@ -41,6 +41,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Geef Gentlestudent toegang tot jouw locatie.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
     <string>Geef Gentlestudent toegang tot jouw locatie.</string>
 	<key>CFBundleURLTypes</key>
