--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -10,7 +10,8 @@ dependencies:
   firebase_core: 0.2.4
   firebase_auth: 0.5.12
   cloud_firestore: 0.7.3
-  flutter_local_notifications: "^0.2.9"
+  local_notifications: any
+  flutter_local_notifications: "^0.3.5"
   beacons: "^0.3.0"
   flutter_map: "^0.0.10"
   date_format: any
