--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intro_views_flutter: "^2.2.2"
   cached_network_image: "^0.4.1+1"
   url_launcher: "^3.0.3"
+  sqflite: any
 
 dev_dependencies:
   flutter_test:
