--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
 		"react-dom": "^16.3.0",
 		"react-dropzone": "^4.2.13",
 		"react-google-maps": "^9.4.5",
+		"react-location-picker": "^1.2.4",
 		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.1",
