--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
 		"react": "^16.3.0",
 		"react-dom": "^16.3.0",
 		"react-dropzone": "^4.2.13",
+		"react-geocode": "^0.1.2",
 		"react-google-maps": "^9.4.5",
 		"react-location-picker": "^1.2.4",
 		"react-redux": "^5.0.7",
