--- a/gentle_student/pubspec.yaml
+++ b/gentle_student/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   firebase_core: 0.2.4
   firebase_auth: 0.5.12
   cloud_firestore: 0.7.3
+  firebase_storage: 1.0.1
+  image_picker: ^0.4.5
   local_notifications: any
   flutter_local_notifications: "^0.3.5"
   beacons: "^0.3.0"
