--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.1",
 		"react-spinners": "^0.3.2",
+		"react-time": "^4.3.0",
 		"react-waypoint": "^8.0.1",
 		"recompose": "^0.26.0",
 		"redux": "^3.7.2",
