More changes for publication in the play store

--- a/mob-app/ios/Runner/Info.plist
+++ b/mob-app/ios/Runner/Info.plist
@@ -26,7 +26,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.52934623602-6s5k4ns526joa3ffldknau0s4on6m9me</string>
-				<string>com.example.gentlestudent</string>
+				<string>gent.gentlestudent</string>
 			</array>
 		</dict>
 	</array>
