--- a/mob-app/ios/Runner/GoogleService-Info.plist
+++ b/mob-app/ios/Runner/GoogleService-Info.plist
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.gentlestudent</string>
+	<string>gent.gentlestudent</string>
 	<key>PROJECT_ID</key>
 	<string>gentle-student</string>
 	<key>STORAGE_BUCKET</key>
