--- a/web-app/app/package.json
+++ b/web-app/app/package.json
@@ -8,6 +8,7 @@
 		"bulma": "^0.6.2",
 		"firebase": "^5.2.0",
 		"glamor": "^2.20.40",
+		"immutable": "^3.8.2",
 		"jsonwebtoken": "^8.3.0",
 		"node-sass-chokidar": "^1.2.2",
 		"react": "^16.3.0",
