Added email functionality for sending emails to issuers

--- a/mob-app/pubspec.yaml
+++ b/mob-app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cached_network_image: any
   url_launcher: any
   sqflite: any
+  mailer2: any
 
 dev_dependencies:
   flutter_test:
