Add deploy script

--- a/web-app/app/package.json
+++ b/web-app/app/package.json
@@ -33,6 +33,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
+		"predeploy": "npm run build",
+		"deploy": "firebase deploy",
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
