--- a/mob-app/ios/Runner/Info.plist
+++ b/mob-app/ios/Runner/Info.plist
@@ -46,6 +46,8 @@
 	<string>Gentlestudent heeft toegang nodig tot jouw afbeeldingen om je profielfoto te kunnen wijzigen.</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
 		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
